pyconde/skins/pyconde2013/static/css/style.less
@import "bootstrap/less/reset.less";

// Core variables and mixins
@import "bootstrap/less/variables.less"; // Modify this for custom colors, font-sizes, etc
@import "bootstrap/less/mixins.less";

// Grid system and page structure
@import "bootstrap/less/scaffolding.less";
@import "bootstrap/less/grid.less";
@import "bootstrap/less/layouts.less";

// Base CSS
@import "bootstrap/less/type.less";
@import "bootstrap/less/code.less";
@import "bootstrap/less/forms.less";
@import "bootstrap/less/tables.less";

// Components: common
@import "bootstrap/less/sprites.less";
// @import "bootstrap/less/dropdowns.less";
// @import "bootstrap/less/wells.less";
// @import "bootstrap/less/component-animations.less";
// @import "bootstrap/less/close.less";

// Components: Buttons & Alerts
@import "bootstrap/less/buttons.less";
@import "bootstrap/less/button-groups.less";
@import "bootstrap/less/alerts.less"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less

// Components: Nav
@import "bootstrap/less/navs.less";
@import "bootstrap/less/navbar.less";
// @import "bootstrap/less/breadcrumbs.less";
@import "bootstrap/less/pagination.less";
@import "bootstrap/less/pager.less";

// Components: Popovers
// @import "bootstrap/less/modals.less";
// @import "bootstrap/less/tooltip.less";
// @import "bootstrap/less/popovers.less";

// Components: Misc
// @import "bootstrap/less/thumbnails.less";
// @import "bootstrap/less/media.less";
// @import "bootstrap/less/labels-badges.less";
// @import "bootstrap/less/progress-bars.less";
// @import "bootstrap/less/accordion.less";
// @import "bootstrap/less/carousel.less";
// @import "bootstrap/less/hero-unit.less";

// Utility classes
@import "bootstrap/less/utilities.less"; // Has to be last to override when necessary
@import "bootstrap/less/responsive";

@baseColor: #444;
@green: #1d8c2d;
@grey: #888;

// Font definitions
@bodyFont: "Verdana", "Helvetica Neue", Helvetica, Arial, sans-serif;
@sansFontFamily: @bodyFont;
@baseFontFamily: @bodyFont;
@baseFontSize: 13.5px;
@headerFontSize: 21.34px;
@header1FontSize: 28px;
@normalFontSize: 13.5px;
@smallFontSize: 11px;

@rightPageMargin: 60px;
@gridColumnWidth: 67px;
@linkColor: @green;

// Bootstrap overrides
// .container {
//   margin-left: 0;
//   margin-right: 0;
// }

// taken from https://github.com/twitter/bootstrap/issues/2742#issuecomment-7374060
@inputBorderFocus: @green;

[class^="icon-"],
[class*=" icon-"] {
    background-image: url('/static_media/css/bootstrap/img/glyphicons-halflings.png') !important;
}

textarea:focus, input[type="text"]:focus,
input[type="password"]:focus,
input[type="datetime"]:focus,
input[type="datetime-local"]:focus,
input[type="date"]:focus,
input[type="month"]:focus,
input[type="time"]:focus,
input[type="week"]:focus,
input[type="number"]:focus,
input[type="email"]:focus,
input[type="url"]:focus,
input[type="search"]:focus,
input[type="tel"]:focus,
input[type="color"]:focus,
.uneditable-input:focus {
  border-color: fade(@inputBorderFocus, 80%);
  @shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px fade(@inputBorderFocus, 60%);
  .box-shadow(@shadow);
  outline: 0;
  outline: thin dotted \9; /* IE6-9 */
}

textarea {
    width: 450px;
    height: 300px;
}


// styles

a {
    color: @linkColor;
}

body {
    font-size: @baseFontSize;
    font-family: @bodyFont;
    color: @baseColor;
    line-height: 1.6em;
    background: darken(#FAFAFA, 2%);
}

p {
    font-size: @baseFontSize;
    line-height: 1.6em;
}

ul {
  list-style-type: square;
}

#page .row {
  border-right: 1px solid #ccc;
  border-left: 1px solid #ccc;
  background: #fff;
  padding-bottom: 50px;
  position: relative;
  padding-top: 20px;
  margin-left: 0;
}
.frontpage #page {
    margin-top: 0;
    background: #FFF;
}

div.page-wrapper {
  // -webkit-box-shadow: 5px -5px 10px -2px #888;
  // box-shadow: 5px -5px 10px -2px #888;
  background: url(../images/frontpage_background.png) no-repeat 0px 0px #fff;
}

header {
  background: url(../images/background.jpg) no-repeat 20px 0px;
  min-height: 330px;
  hgroup {
    margin: 30px auto 0 auto;
    h1, h2 {
      background: @green;
      color: #FFF;
      padding: 7px 7px 7px 20px;
      margin: 0 0 10px -10px;
      float: left;
      clear: left;
      font-size: @headerFontSize;
      a, a:hover {
        color: #FFF;
      }
    }
  }
}

#search {
    position: absolute;
    top: 0px;
    right: 5px;
}

#subheader {
  margin-top: -115px;
  margin-bottom: 5px;
  .logo {
    text-align: right;
  }
  .logo a {
    border: 0;
    display: inline-block;
    margin-right: @rightPageMargin;
  }
  img {
    border: 17px solid rgba(255, 255, 255, 0.5);
  }
  .aligned {
    margin-top: 115px;
  }
}

#page {
  .logo-spacer {
    padding-top: 60px;
  }
  a.logo {
    position: relative;
    top: -130px;
    left: 60px;
  }
}

#mainmenu2, nav2 {
  ul {
    list-style-type: none;
    margin-left: 0px;
    font-size: @smallFontSize;
    li.selected > a {
        font-weight: bold;
    }
    li {
      padding-bottom: 2px;
      a, .link-style {
        color: #fff;
        background: @green;
        color: #fff;
        padding: 3px 10px 3px 15px;
        font-weight: normal;
        display: inline-block;
        line-height: 25px;
        &:hover {
          color: #FFF;
        }
      }
      ul {
        margin-top: 4px;
        margin-bottom: 7px;
        li {
          a {
            font-size: 85%;
            line-height: 120%;
            background: none;
            color: @linkColor;
            font-weight: normal;
            padding: 3px 10px 3px 35px;
            &:hover {
              color: @linkColor;
            }
          }
        }
      }
    }
  }
}

#mainmenu2 ul {
    font-size: @normalFontSize;
}

footer .box {
    margin-left: @fluidGridGutterWidth;
}
/* ... */

